# ipydex

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  example1.py  ipHelp.py  ipHelpv10.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
examples/: displaytools-example.html  displaytools-example.ipynb  example1.py
ipydex/: __init__.py  core.py  displaytools.py
ipydex/test/: __init__.py  run_all.py  test_core.py  test_displaytools.py  test_embed.py
ipydex/tests/: test_core.py  test_displaytools.py  test_embed.py
src/ipydex/: __init__.py  core.py  displaytools.py  script.py  utils.py
src/ipydex/test/: test_core.py  test_displaytools.py
test/: conftest.py  run_all.py  test_core.py  test_displaytools.py  test_embed.py
